<resources>
    <string name="app_name">JobSeeker</string>
    <string name="search_fragment_nav">Поиск</string>
    <string name="favorite_fragment_nav">Избранное</string>
    <string name="responses_fragment_nav">Отклики</string>
    <string name="message_fragment_nav">Сообщения</string>
    <string name="profile_fragment_nav">Профиль</string>
    <string name="et_search_false">Должность, ключевые слова</string>
    <string name="et_search_true">Должность по подходящим вакансиям</string>
    <string name="tv_vacancies_for_u">Вакансии для вас</string>
    <string name="favorite">Избранное</string>
</resources>